Use built-in Base64 decoder